kubernetes/infra/flux-system/addons/webhooks/github/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  hosts:
    - flux-webhook.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: webhook-receiver.flux-system.svc.cluster.local
            port:
              number: 80
